Added modal background (transparent)

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content class="main-view">
   <div class="overlay" (click)="dismiss()"></div>
   <div class="modal_content">
     <h2>Welcome to Ionic!</h2>
