Added scroller in modal

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,13 +1,13 @@
 <ion-content class="main-view">
   <div class="overlay" (click)="dismiss()"></div>
-  <div class="modal_content">
+  <ion-scroll class="modal_content" scrollY="true">
     <h2>Welcome to Ionic!</h2>
-    <p>
-      This starter project comes with simple tabs-based layout for apps that are going to primarily use a Tabbed UI.
-    </p>
-    <p>
-      Take a look at the <code>src/pages/</code> directory to add or change tabs, update any existing page or create new
-      pages.
-    </p>
-  </div>
+      <p>
+        This starter project comes with simple tabs-based layout for apps that are going to primarily use a Tabbed UI.
+      </p>
+      <p>
+        Take a look at the <code>src/pages/</code> directory to add or change tabs, update any existing page or create new
+        pages.
+      </p>
+  </ion-scroll>
 </ion-content>
